BJS2-58330 1. В методах findMax и findMinGreaterThan .get() заменён на .orElseThrow. 2. Заменил sout на System.out.printf. 3. Заменил collect(Collectors.toList()) на List() в методе convertToLengths. 4. Более конкретное сообщение об ошибке в методе findAverage.